# discrete-cosine-transform

./: LICENSE  README.md  pyproject.toml
dct/: encoder.py  quantization.py  transformation.py
notebook/: tutorial.ipynb
